fixed the wonky x-bar labels with text-overflow and overflow settings in the CSS for .values-label-; adjusted padding too, so it fits nicely.

--- a/bar-chart.css
+++ b/bar-chart.css
@@ -110,6 +110,11 @@ h1 {
   display: grid;
 }
 
+.values-label- {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 #x-axis {
   text-align: center;
   grid-area: x;
